--- a/userstyle.css
+++ b/userstyle.css
@@ -1,402 +1,125 @@
-/*Common styles*/
+html,
+button,
+input,
+select,
+textarea {
+  /* font-family: Helvetica, "Segoe UI", Arial, sans-serif; */
+  font-family: OswaldBook, "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.message-input,
+form#search {
+  background-color: #EFEFAF !important;
+}
+
+.inbox-panel, #chat, .flow {
+  background: #222 !important;
+}
+
+#tab-bar, #user-menu-toggle{
+  background: #111 !important;
+  border-bottom: solid 1px #444;
+}
+#flow-dropdown-item{
+  background: #111 !important;
+  height: 30px !important;
+}
+.tab-fade-wrapper::after{
+  background-image: none !important;
+}
+
+.toolbar, .inbox-toolbar, .chat-toolbar, .single-view-toolbar{
+  background: #303030 !important;
+  border-bottom: solid 1px #444 !important;
+}
+
+.active .user-avatar, .active .invitation-avata {
+  box-shadow: 0px 0px 4px 1px #3a9ef0 !important;
+}
+
+.chat-message, .comment-message, .action-message, .line-message, .status-message, .file-message, .error-message, .inbox-comment-message, .inbox-file-comment-message, .mention-message, .inbox-message, .info-message, .single-message{
+  background: #222 !important;
+  border-color: #292929 !important;
+  font-family: 'proxima nova' !important;
+  font-weight: 500 !important;
+  font-size: 14px !important;
+}
+
+.split-resizer {
+  background: #262626;
+  box-shadow: 3px 0 10px rgba(0,0,0,.2);
+  border-left: solid 1px #444;
+  border-right: solid 1px #333;
+}
+
+.chat-message, .comment-message, .action-message, .line-message, .status-message, .file-message, .error-message, .inbox-comment-message, .inbox-file-comment-messag {
+  color: #eee !important;
+}
+
+.action-message, .line-message, .status-message {
+  font-style: italic;
+}
+.action-message .message-author, .line-message .message-author, .status-message .message-author,
+.action-message .content, .line-message .content, .status-message .content{
+  color: #3a9ef0 !important;
+}
+
+.chat-message pre.formatted,
+.comment-message pre.formatted,
+.action-message pre.formatted,
+.line-message pre.formatted,
+.status-message pre.formatted,
+.file-message pre.formatted,
+.error-message pre.formatted,
+.inbox-comment-message pre.formatted,
+.inbox-file-comment-message pre.formatted,
+.mention-message pre.formatted,
+.inbox-message pre.formatted,
+.info-message pre.formatted,
+.single-message pre.formatted {
+  background-color: #ddd !important;
+  /*
+  background: #333 !important;
+  color: #ccc;
+  */
+  border: none !important;
+}
+
+
+.message-author { color: #999; }
+.message-author:hover { color: #fff; text-decoration: none !important }
+
+#chat form {
+  background: #303030 !important;
+  border-top: solid 1px #444 !important;
+  box-shadow: 0 -5px 10px rgba(0,0,0,.2);
+}
+
+.toolbar-button{
+  font-family: OswaldBook, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /* font-family: 'proxima nova' !important; */
+  font-family: 'proxima nova' !important;
+  font-weight: 300 !important;
+  border: solid 1px #393939 !important;
+}
+
+@font-face {
+  font-family: 'OswaldBook';
+  src: url(Oswald-Regular-webfont.woff) format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .content {
-  min-height: 0 !important;
-  font-family: Arial !important;
-}
-
-.normal-icon:before {
-  font-size: 1em !important;
-  line-height: 1em !important;
-  width: 16px !important;
-}
-
-.avatar .type-icon, 
-.user-menu-avatar .type-icon, 
-.single-message-avatar .type-icon {
-  width: 13px !important;
-  height: 13px !important;
-}
-
-.avatar .type-icon:before,
-.user-menu-avatar .type-icon:before,
-.single-message-avatar .type-icon:before {
-  font-size: 10px !important;
-  line-height: normal !important;
-} 
-
-.dropdown-indicator, #more {
-  padding: 1em 1px !important;
-}
-
-.chat-message-list {
-  top: 0 !important;
-}
-
-.inbox-message-list {
-  top: 3.5em !important;
-}
-
-.toolbar, 
-.inbox-toolbar, 
-.chat-toolbar, 
-.single-view-toolbar {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-  height: 46px !important;
-  padding-left: 1em !important;
-  padding-right: 1em !important;
-}
-
-menu#users {
-  display: none !important;
-  height: 0px !important;
-}
-
-.chat-toolbar > ul.online {
-  height: 26px !important;
-}
-
-.single-view-toolbar-actions li .toolbar-button {
-  vertical-align: top !important;
-}
-
-.toolbar-button {
-  height: 2em !important;
-  padding: 0.3em !important;
-}
-
-.toolbar-button.icon {
-  width: 2em !important;
-}
-
-.inbox-toolbar input[type="text"], 
-.inbox-toolbar .tokenist {
-  padding-top: 0.2em !important;
-  padding-bottom: 0.2em !important;
-}
-
-.inbox-toolbar input[type="text"].tokenist-placeholder:before,
-.inbox-toolbar .tokenist.tokenist-placeholder:before {
-  top: 4px !important;
-  left: 5px !important;
-}
-
-.inbox-toolbar li.right {
-  height: 26px !important;
-}
-
-#avatar-list .user-avatar,
-#avatar-list .invitation-avatar {
-  width: 2em !important;
-  height: 2em !important;
-}
-
-.tag {
-  top: auto !important;
-}
-
-.icon-tag::before {
-  left: auto !important;
-}
-
-.message-actions button,
-.single-message-actions button,
-.message-actions .dropdown,
-.single-message-actions .dropdown {
-  display: block !important;
-}
-
-.dropdown-menu,
-.mentions-dropdown {
-  margin-top: 0 !important;
-}
-
-.dropdown-menu.pull-right,
-.pull-right.mentions-dropdown {
-  right: -9px !important;
-}
-
-/*================*/
-/*main chat styles*/
-
-#chat li[class*="message"] {
-  padding-top: 0.1em !important;
-  padding-bottom: 0.1em !important;
-  padding-left: 2.5em !important;
-  font-size: 13px !important;
-  line-height: 16px !important;
-  border-style: inherit !important;
-}
-
-#chat li[class*="message"].external,
-#chat li[class*="message"].external .message-author {
-  opacity: 0.4 !important;
-}
-
-#chat li[class*="message"].external .content a.external {
-  text-overflow: ellipsis !important;
-  width: 170px !important;
-  overflow: hidden !important;
-  white-space: nowrap !important;
-  display: inline-block !important;  
-}
-
-#chat li[class*="message"].external:hover {
-  opacity: 0.9 !important;
-  -webkit-transition: opacity 0.2s ease-in !important;  
-}
-
-#chat li[class*="message"]:last-child {
-  padding-bottom: 1.3em !important;
-}
-
-#chat li.time-separator[class*="message"] {
-  border-top-width: 1px !important;
-}
-
-#chat li.me[class*="message"] .message-author {
-  color: yellowGreen !important;
-}
-
-#chat li[class*="message"] .message-author {
-  float: left !important;
-  position: relative !important;
-  left: 2.5em !important;
-  display: block !important;
-  visibility: visible !important;
-  width: 3.5em !important;
-  margin-right: 0 !important;
-}
-
-#chat li[class*="message"] time.timestamp {
-  visibility: visible !important;
-  float: left;
-  position: inherit !important;
-  right: 0 !important;
-  font-size: inherit !important;
-  left: -4.5em !important;  
-}
-
-/*
-#chat li[class*="message"] time.timestamp:before {
-  content: "[";
-  font-size: 11px;
-}
-
-#chat li[class*="message"] time.timestamp:after {
-  content: "]";
-  font-size: 11px;
-}
-*/
-
-#chat .chat-message .tag-input,
-.comment-message .tag-input,
-.action-message .tag-input,
-.line-message .tag-input,
-.status-message .tag-input,
-.file-message .tag-input,
-.error-message .tag-input {
-  right: 1em !important;
-}
-
-/*============*/
-/*inbox styles*/
-
-#inbox [class^="icon-"]:before,
-#inbox [class*=" icon-"]:before {
-  vertical-align: baseline !important;
-}
-
-#inbox #filters {
-  top: 3.615em !important;
-  padding: 0 !important;
-}
-
-#inbox .inbox-toolbar #filter-toggle {
-  width: 5em !important;
-}
-
-#inbox .inbox-toolbar .search {
-  margin-left: 5.5em !important;
-  margin-right: 2.5em !important;
-}
-
-#inbox .avatar, 
-#inbox .user-menu-avatar, 
-#inbox .single-message-avatar {
-  height: 3em !important;
-  width: 3em !important;
-  margin-right: 1em !important;
-}
-
-#inbox li[class*="message"] {
-  padding: 0.5em 0.8em !important;
-  line-height: 16px !important;
-}
-
-#inbox li[class*="message"]:first-child {
-  padding-top: 1em !important;
-}
-
-#inbox .comment-count {
-  top: -5px !important;
-  left: -5px !important;
-  font-size: 10px !important;
-  line-height: 16px !important;
-  height: 16px !important;
-  width: 16px !important;
-  border: none !important;
-}
-
-#inbox .inbox-message header, 
-#inbox .info-message header, 
-#inbox .single-message header {
-  font-size: 11px !important;
-}
-
-#inbox .inbox-message .title, 
-#inbox .info-message .title, 
-#inbox .single-message .title {
-  font-weight: normal !important;
-  font-size: 11px !important;
-}
-
-#inbox li[class*="message"] .excerpt {
-  max-height: none !important;
-}
-
-#inbox > .indicators .more-messages.above {
-  top: 85px !important;
-}
-
-#inbox ul.tags.clean {
-  display: block !important;
-}
-
-#inbox .inbox-message .tag-input,
-.info-message .tag-input,
-.single-message .tag-input {
-  right: 1px !important;
-}
-
-.inbox-panel {
-  float: right !important;
-}
-
-/*==============*/
-/*single message*/
-
-#single .single-view-content {
-  top: 3em !important;
-  left: 3em !important;
-  padding-right: 2.5em !important;
-}
-#single .single-message-actions {
-  right: -2em !important;
-}
-
-#single .single-message-avatar {
-  width: 3.5em !important;
-  height: 3.5em !important;
-  margin: 0 1em 1em 0 !important;
-}
-
-#single .single-message-header {
-  min-height: 0 !important;
-  margin-bottom: 0 !important;
-  padding-bottom: 1em !important;
-}
-
-#single .single-message-title, 
-#single .single-message-error-title {
-  font-size: 12px !important;
-}
-
-#single .single-view-comments {
-  margin: 1em 0 !important;
-}
-
-#single.mail .body table.headers {
-  margin: 1em 0 !important;
-} 
-
-#single .inbox-comment-message,
-#single .single-message-header, 
-#single .single-message-body, 
-#single .single-view-comments {
-  padding: 0.3em 1em 0.3em 0 !important;
-  margin: 0 !important;
-  border: none !important;
-}
-
-#single .single-message-body p {
-  margin-bottom: 1em !important;
-}  
-
-#single .single-message-body p:last-child {
-  margin: 0 !important;
-}
-
-#single .inbox-comment-message:last-child {
-  padding-bottom: 1em !important;
-}
-
-#single .comment-form {
-  left: 0 !important;
-  right: 0 !important;
-  padding: 0 0 1em !important;
-}
-
-#single .comment-form a#comment-upload-btn {
-  margin-left: 0.5em !important;
-}
-
-#single .comment-form .avatar {
-  display: none !important;
-}
-
-#single .single-view-close-button {
-  top: 3em !important;
-}
-
-#single.rss .comment-form{
-  padding: 0 1em 1em !important;
-}
-
-#single ul.tags {
-  display: block !important;
-}
-
-/*================*/
-/*user list styles*/
-
-#user-list {
-  top: 44px !important;
-  padding: 1em !important;
-}
-
-#user-list .user-avatar, 
-#user-list .invitation-avatar {
-  width: 2em !important;
-  height: 2em !important;
-}
-
-#user-list .user {
-  margin: 0 0.5em 0.5em 0 !important;
-}
-
-#user-list h4 {
-  margin: 1em 0 !important;
-  padding: 0 !important;
-}
-
-#user-list .user-name, 
-#user-list .invitation-email {
-  font-size: 1em !important;
-  line-height: 1.3em !important;
-}
-
-#user-list #invite-button {
-  margin-top: 1em !important;
+  font-size: 14px;
+  font-family: OswaldBook, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #eee;
+}
+
+span.emojie,
+img.emojie {
+  line-height: 45px;
+  font-size: 40px;
+  margin-top: 0;
+  vertical-align: 0px;
 }
